# dlt-practice

./: .flake8  Makefile  README.md  demo_bigquery.py  demo_resource_source_duckdb.ipynb  main.py  pyproject.toml  sql_database_pipeline.py
.claude/: settings.local.json
.dlt/: config.toml
