[project]
name = "dlt-practice"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "dlt[bigquery,duckdb,hub,sql-database]>=1.28.1",
    "ibis-framework>=12.0.0",
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "marimo>=0.23.8",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "pyarrow>=24.0.0",
    "pydantic>=2.13.4",
    "pymysql>=1.2.0",
]
